--- a/creator.ui
+++ b/creator.ui
@@ -29,7 +29,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>unRAID USB Creator</string>
+   <string>Unraid USB Flash Creator</string>
   </property>
   <property name="windowIcon">
    <iconset resource="resources.qrc">
@@ -246,7 +246,7 @@
           <item>
            <widget class="QLineEdit" name="LocalZipText">
             <property name="toolTip">
-             <string>Full path to unRAID Flash backup zip file</string>
+             <string>Full path to Unraid Flash backup zip file</string>
             </property>
            </widget>
           </item>
@@ -448,7 +448,7 @@
            <item>
             <widget class="QCheckBox" name="EFIBootCheckBox">
              <property name="text">
-              <string>Allow EFI Boot</string>
+              <string>Allow UEFI Boot</string>
              </property>
             </widget>
            </item>
@@ -929,7 +929,7 @@
       <item>
        <widget class="QLabel" name="labelAbout">
         <property name="text">
-         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:600;&quot;&gt;© 2017 Lime Technology, Inc&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;This software was created under GPLv2, &lt;br/&gt;using earlier work from LibreELEC.&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;For license, credits and history, please read:&lt;br/&gt;&lt;a href=&quot;https://github.com/limetech/usb-creator&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/limetech/usb-creator&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;To report issues with this tool, please send email to: &lt;br/&gt;&lt;a href=&quot;mailto:support@lime-technology.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;support@lime-technology.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;center&quot;&gt;&lt;span style=&quot; font-size:16pt; font-weight:600;&quot;&gt;© 2018 Lime Technology, Inc&lt;/span&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;This software was created under GPLv2, &lt;br/&gt;using earlier work from LibreELEC.&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;For license, credits and history, please read:&lt;br/&gt;&lt;a href=&quot;https://github.com/limetech/usb-creator&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;https://github.com/limetech/usb-creator&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;p align=&quot;center&quot;&gt;To report issues with this tool, please send email to: &lt;br/&gt;&lt;a href=&quot;mailto:support@lime-technology.com&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#0000ff;&quot;&gt;support@lime-technology.com&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
         <property name="textFormat">
          <enum>Qt::RichText</enum>
