--- a/resources.qrc
+++ b/resources.qrc
@@ -24,6 +24,7 @@
         <file>images/refresh.png</file>
         <file>images/eye_on.png</file>
         <file>images/eye_off.png</file>
+        <file>images/info.png</file>
         <file>images/no1.png</file>
         <file>images/no2.png</file>
         <file>images/no3.png</file>
